[package]
name = "mastodon-markov"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
mammut = "0.13.0"
markov = "1.1.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
anyhow = "1.0.86"
chrono = "0.4.38"
rand = "0.8.5"
regex = "1.10.4"
html-escape = "0.2.13"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
